--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ url: "https://www.prudentmariners.com" # the base hostname & protocol for your s
 twitter_username: prudentmariners
 instagram_username: prudentmariners
 facebook_username: prudentmariners
+youtube_username: prudentmariners
 phone: "757-453-3092"
 
 google_analytics: UA-129009825-1
