styles and settingsm
WIP new theme skeleton

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-site: Journal Jekyll Theme
+site: "Prudent Mariners :: A Mobile Marine Services Company"
 
 title: "Prudent Mariners :: A Mobile Marine Services Company"
 email: "info@prudentmariners.com"
