--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,16 +12,17 @@ menu_settings:
   menu_items:
     - title: 'Home'
       url: '/'
+    - title: 'About'
+      url: '/about'
     - title: 'Rigging'
       url: '/rigging'
     - title: 'Electrical'
       url: '/electrical'
-    - title: 'Projects'
-      url: '/projects/'
-    - title: 'About'
-      url: '/about'
-    - title: 'Blog'
-      url: '/blog'
+    # v2.0
+    # - title: 'Projects'
+    #   url: '/projects/'
+    # - title: 'Blog'
+    #   url: '/blog'
     - title: 'Contact'
       url: '/contact'
 
